--- a/template-default/src/app/index.html
+++ b/template-default/src/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>myfw Starter</title>
+  <title>bun-elysia-vue-fs Starter</title>
 </head>
 <body>
   <div id="app"></div>
